fixing .maps and auth0 - wip

--- a/components/layout/MainNav.module.css
+++ b/components/layout/MainNav.module.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  align-items: center;
   background-color:  darkslategrey;
   padding: 0 10%;
 }
