--- a/components/students/AddNewStudent.module.css
+++ b/components/students/AddNewStudent.module.css
@@ -30,16 +30,15 @@
 .actions button {
   font: inherit;
   cursor: pointer;
-  background-color:  #1a2920;
+  background-color:  darkslategrey;
   color: white;
   padding: 0.5rem 1.5rem;
-  border: 1px solid #77002e;
   border-radius: 4px;
   font-weight: bold;
 }
 
 .actions button:hover,
 .actions button:active {
-  background-color: #a50e48;
+  background-color: darkslategrey;
   border-color: #a50e48;
 }
