--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -1,23 +1,91 @@
-.main {
-  margin: 3rem auto;
-  width: 90%;
-  max-width: 40rem;
+/* Style the body */
+.body {
+  font-family: Arial;
+  padding: 10px;
+  background: #f1f1f1;
+  margin: 0;
 }
 
-.content {
+/* Header/logo Title */
+.header {
+  padding: 25px;
+  text-align: center;
+  background: #4d4d4d;
+  color: white;
+}  
+
+.header h1 {
+  font-size: 35px;
+}
+
+/* Style the top navigation bar */
+.navbar {
   display: flex;
-  flex-direction: row;
+  background-color: #333;
+}
+
+/* Style the navigation bar links */
+.navbar a {
+  color: white;
+  padding: 14px 20px;
+  text-decoration: none;
+  text-align: center;
+}
+
+/* Change color on hover */
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Column container */
+.row {  
+  display: flex;
+  flex-wrap: wrap;
+}
+
+/* Create two unequal columns that sits next to each other */
+/* Sidebar/left column */
+.side {
+  flex: 30%;
+  background-color: #f1f1f1;
+  padding: 20px;
+}
+
+/* Main column */
+.main {
+  flex: 70%;
+  background-color: #bfbfbf;
+  padding: 20px;
+}
+
+/* Add a card effect for articles */
+.card {
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+}
+
+/* Fake image, just for this example */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+}
+
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
+  position: absolute;
+  bottom: 0;
   width: 100%;
 }
 
-.side {
-  display: flex;
-  width: 20%;
-  /* max-width: 40rem; */
-}
-
-.page {
-  display: flex;
-  width: 80%;
-  /* max-width: 40rem; */
+/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 700px) {
+  .row, .navbar {   
+    flex-direction: column;
+  }
 }
