--- a/components/ui/Card.module.css
+++ b/components/ui/Card.module.css
@@ -2,7 +2,7 @@
   background-color: white;
   border-radius: 6px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-  height: 30px;
+  /* height: 30px; */
 }
 
 
