--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -8,8 +8,8 @@
 
 /* Header/logo Title */
 .header {
-  padding: 25px;
-  background: #4d4d4d;
+  padding: 20px;
+  background: #201426;
   color: white;
   display: flex;
   justify-content: space-between;
@@ -29,7 +29,7 @@
 .navbar {
   display: flex;
   justify-content: center;
-  background-color: #333;
+  background-color: #92a88a;
 }
 
 /* Style the navigation bar links */
@@ -56,15 +56,16 @@
 /* Sidebar/left column */
 .side {
   flex: 25%;
-  background-color: #f1f1f1;
+  background-color: #c2bcc2;
   padding: 20px;
 }
 
 /* Main column */
 .mainCol {
   flex: 75%;
-  background-color: #bfbfbf;
+  background-color: #A79FA8;
   padding: 20px;
+  min-height: 750px;
 }
 .main {
   margin: 3rem auto;
@@ -77,6 +78,7 @@
   background-color: white;
   padding: 20px;
   margin-top: 20px;
+  /* opacity: 0.5; */
 }
 
 /* Fake image, just for this example */
@@ -92,6 +94,7 @@
   text-align: center;
   background: #ddd;
   position: relative;
+  left: 0;
   bottom: 0;
   width: 100%;
 }
