--- a/components/students/AddNewStudent.module.css
+++ b/components/students/AddNewStudent.module.css
@@ -8,15 +8,17 @@
 
 .control label {
   display: block;
-  font-weight: bold;
+  font-weight: normal;
   margin-bottom: 0.5rem;
 }
 
 .control input,
+.control select,
 .control textarea {
   display: block;
   font: inherit;
   border-radius: 4px;
+  background-color: white;
   border: 1px solid #ccc;
   padding: 0.25rem;
   width: 100%;
@@ -30,7 +32,7 @@
 .actions button {
   font: inherit;
   cursor: pointer;
-  background-color:  darkslategrey;
+  background-color:  #86a479;
   color: white;
   padding: 0.5rem 1.5rem;
   border-radius: 4px;
@@ -39,66 +41,5 @@
 
 .actions button:hover,
 .actions button:active {
-  background-color: darkslategrey;
-  border-color: #a50e48;
-}
-
-.customselect {
-  position: relative;
-  font-family: Arial;
-}
-
-.customselect select {
-  display: none; /*hide original SELECT element:*/
-}
-
-.select-selected {
-  background-color: DodgerBlue;
-}
-
-/*style the arrow inside the select element:*/
-.select-selected:after {
-  position: absolute;
-  content: "";
-  top: 14px;
-  right: 10px;
-  width: 0;
-  height: 0;
-  border: 6px solid transparent;
-  border-color: #fff transparent transparent transparent;
-}
-
-/*point the arrow upwards when the select box is open (active):*/
-.select-selected.select-arrow-active:after {
-  border-color: transparent transparent #fff transparent;
-  top: 7px;
-}
-
-/*style the items (options), including the selected item:*/
-.select-items div,.select-selected {
-  color: #ffffff;
-  padding: 8px 16px;
-  border: 1px solid transparent;
-  border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-  cursor: pointer;
-  user-select: none;
-}
-
-/*style items (options):*/
-.select-items {
-  position: absolute;
-  background-color: DodgerBlue;
-  top: 100%;
-  left: 0;
-  right: 0;
-  z-index: 99;
-}
-
-/*hide the items when the select box is closed:*/
-.select-hide {
-  display: none;
-}
-
-.select-items div:hover, .same-as-selected {
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: #86a479;
 }
