--- a/components/profile/SideProfile.module.css
+++ b/components/profile/SideProfile.module.css
@@ -1,4 +1,20 @@
-.main{
-    text-align: center;
+.main {
+  text-align: center;
 }
 
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+.button:hover {
+  opacity: 0.7;
+}
