--- a/components/students/AddNewStudent.module.css
+++ b/components/students/AddNewStudent.module.css
@@ -32,7 +32,7 @@
 .actions button {
   font: inherit;
   cursor: pointer;
-  background-color:  #86a479;
+  background-color:  #92a88a;
   color: white;
   padding: 0.5rem 1.5rem;
   border-radius: 4px;
