--- a/components/tools/Profile.module.css
+++ b/components/tools/Profile.module.css
@@ -1,34 +1,29 @@
-
-.flexContain {
-    background-color: #c4c0ffd3;
-    display: flex;
-    flex-direction: column;
+.title {
+  text-align: left;
+  font-weight: bold;
 }
 
-.flexRow {
-    background-color: #fab0fad3;
-    display: flex;
-    flex-direction: row;
+.flexContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* background-color: DodgerBlue; */
 }
 
-.flexHead {
-    background-color: #beffccde;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    width: 45%;
-    margin: 5px;
-    text-align: left;
-    font-size: 16px;
-  }
+.titleColumn {
+  /* background-color: #f1f1f1; */
+  width: 40%;
+  margin: 10px;
+  text-align: left;
+  font-weight: bold;
+  font-size: 15px;
+}
 
-  .flexInfo {
-    background-color: #f5ffbede;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    width: 45%;
-    margin: 5px;
-    text-align: left;
-    font-size: 16px;
-  }
+.contentColumn {
+  /* background-color: #f1f1f1; */
+  width: 60%;
+  margin: 10px;
+  text-align: left;
+  font-weight: lighter;
+  font-size: 15px;
+}
