--- a/components/students/StudentTable.module.css
+++ b/components/students/StudentTable.module.css
@@ -4,6 +4,12 @@
   min-width: "100%";
 }
 
+.table {
+  table-layout: fixed;
+  border-collapse: collapse;
+  width: 100%;
+}     
+
 .titleRow {
   min-width: 30%;
   text-align: left;
@@ -11,4 +17,6 @@
 .nameCol {
   min-width: 30%;
   text-align: left;
+  overflow: hidden;
+  white-space: nowrap;
 }
