--- a/components/students/StudentTable.module.css
+++ b/components/students/StudentTable.module.css
@@ -5,8 +5,8 @@
 }
 
 .table {
-  table-layout: fixed;
-  border-collapse: collapse;
+  table-layout: auto;
+  border-collapse: separate;
   width: 100%;
 }     
 
@@ -14,9 +14,21 @@
   min-width: 30%;
   text-align: left;
 }
+
 .nameCol {
   min-width: 30%;
   text-align: left;
   overflow: hidden;
   white-space: nowrap;
+}
+
+.buttonCol {
+  min-width: 5%;
+  text-align: left;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.spacer {
+  padding: 20px;
 }
