--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -1,38 +1,22 @@
-/* Style the body */
-.body {
-  font-family: Arial;
-  padding: 10px;
-  background: #f1f1f1;
-  margin: 0;
-}
-
-/* Header/logo Title */
 .header {
   padding: 20px;
-  background: #2a1a32; /*#201426;*/ 
+  background: #2a1a32;
   color: white;
   display: flex;
   justify-content: space-between;
-}  
+}
 
 .header h1 {
   font-family: Trebuchet, serif;
   font-size: 50px;
 }
 
-.Image {
-  border-radius: 5px;
-  overflow: hidden;
-}
-
-/* Style the top navigation bar */
 .navbar {
   display: flex;
   justify-content: center;
   background-color: #92a88a;
 }
 
-/* Style the navigation bar links */
 .navbar a {
   color: white;
   padding: 14px 20px;
@@ -40,68 +24,63 @@
   text-align: center;
 }
 
-/* Change color on hover */
 .navbar a:hover {
   background-color: #ddd;
-  color: black;
+  color: #2a1a32;
 }
 
-/* Column container */
-.row {  
+.row {
   display: flex;
   flex-wrap: wrap;
 }
 
-/* Create two unequal columns that sits next to each other */
-/* Sidebar/left column */
 .side {
   flex: 25%;
   background-color: #543564;
   padding: 20px;
 }
 
-/* Main column */
 .mainCol {
   flex: 75%;
   background-color: #9d8fa3;
   padding: 20px;
   min-height: 750px;
 }
+
 .main {
   margin: 3rem auto;
   width: 90%;
   max-width: 40rem;
 }
 
-/* Add a card effect for articles */
 .card {
   background-color: white;
   padding: 20px;
   margin-top: 20px;
-  /* opacity: 0.5; */
+  text-align: center;
 }
 
-/* Fake image, just for this example */
-.fakeimg {
-  background-color: #aaa;
-  width: 100%;
-  padding: 20px;
+.imgdiv {
+  border-radius: 50%;
+  overflow: hidden;
+  width: 80px;
+  height: 80px;
 }
 
-/* Footer */
 .footer {
   padding: 20px;
   text-align: center;
-  background: #ddd;
+  background: #2a1a32;
+  color: white;
   position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
 }
 
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
-  .row, .navbar {   
+  .row,
+  .navbar {
     flex-direction: column;
   }
 }
