--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,65 +4,14 @@
   padding: 10px;
 }
 
+.container h1 {
+  font-family: 'Calibri', sans-serif;
+  font-size: 30px;
+}
+
 .content {
   text-align: center;
   padding: 20px;
-}
-
-.form {
-  width: 100%;
-}
-
-.formItem {
-  display: block;
-  width: 100%;
-  margin: 10px auto;
-}
-
-.formItem label {
-  display: block;
-}
-
-.formItem input[type='text'] {
-  display: block;
-  width: 100%;
-  padding: 10px;
-}
-
-.formItem textarea {
-  display: block;
-  width: 100%;
-  padding: 10px;
-}
-
-.actions {
-  margin-top: 1rem;
-  text-align: right;
-}
-
-.actions button {
-  font: inherit;
-  cursor: pointer;
-  background-color:  #1a2920;
-  color: white;
-  padding: 0.5rem 1.5rem;
-  border: 1px solid #77002e;
-  border-radius: 4px;
-  font-weight: bold;
-}
-
-.actions button:hover,
-.actions button:active {
-  background-color: #a50e48;
-  border-color: #a50e48;
-}
-
-.error {
-  color: red;
-}
-
-.message {
-  color: green;
 }
 
 .spacer {
